--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-10.htm
@@ -16,7 +16,6 @@ Moving and Copying Java Elements</h1>
 <div CLASS="Para">In this section, you will move a resource between Java
 packages.</div>
 
-<br>&nbsp;
 <table BORDER=0 CELLSPACING=0 CELLPADDING=3 >
 <caption><THEAD></THEAD><TBODY>
 <br></TBODY></caption>
@@ -66,10 +65,10 @@ expand the hierarchy to browse the possible new locations for the resource.&nbsp
 <div CLASS="Para">Using the context menu option is simply an alternative
 to drag and drop.</div>
 
-
-<p CLASS="Para">Select the&nbsp;<span CLASS="Filename">junit.framework</span>
+<div CLASS="Para">Select the&nbsp;<span CLASS="Filename">junit.framework</span>
 package, then click&nbsp;<span CLASS="Label">OK</span>. The class is moved,
-and the package declaration changes to reflect its new location.
+and the package declaration changes to reflect its new location.</div>
+
 <div CLASS="Note">
 <div CLASS="Para">Note: This example did not result in compile errors.
 However, moving a compilation unit can lead to compile errors because import
