--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-11.htm
@@ -44,7 +44,7 @@ Performing a JDT Search</h2>
 
 <td ALIGN=LEFT VALIGN=TOP>
 <div CLASS="Para">In the Java perspective, click the&nbsp;<span CLASS="Label">Search</span>
-button in the workbench toolbar.&nbsp;</div>
+button in the workbench toolbar or use Search > Java from the menu bar.</div>
 </td>
 </tr>
 
@@ -154,7 +154,7 @@ and from its context menu, select References > Workspace.</div>
 <h2>
 From an Editor</h2>
 
-<div CLASS="Para">In the Packages view, double-click&nbsp;<span CLASS="Filename">junit.framework.TestCase.java</span>
+<div CLASS="Para">In the Package Explorer, double-click&nbsp;<span CLASS="Filename">junit.framework.TestCase.java</span>
 to open it in an editor. In the editor, select the class name&nbsp;<span CLASS="Filename">TestCase</span>
 and from the context menu, select Search > References > Workspace.</div>
 
@@ -192,7 +192,7 @@ Performing a Text Search</h2>
 
 <td ALIGN=LEFT VALIGN=TOP>
 <div CLASS="Para">In the Java perspective, click the&nbsp;<span CLASS="Label">Search</span>
-button in the workbench toolbar.&nbsp;</div>
+button in the workbench toolbar or select Search > File from the menu bar.</div>
 </td>
 </tr>
 
