--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
@@ -131,13 +131,13 @@ in the Hierarchy view and also opens in an active editor.</div>
 <td><b>8.</b></td>
 
 <td>
-<div CLASS="Para">Bring the Package viewer to the front and select the
+<div CLASS="Para">Bring the Package Explorer to the front and select the
 package junit.framework. Use&nbsp;<span CLASS="Label">Open Type Hierarchy</span>
 from its context menu.</div>
 
 <div CLASS="Para">A hierarchy is opened containing all classes of the package.
 For completion of the tree, the hierarchy also shows some classes from
-other packages. These types are shown with a half filled type image.&nbsp;
+other packages. These types are shown with a white filled type image.&nbsp;
 <br><img SRC="../images/qs-33a.gif" NOSAVE height=506 width=263></div>
 </td>
 </tr>
