--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-9.htm
@@ -48,7 +48,7 @@ as the name for the new package. Then click&nbsp;<span CLASS="Label">Finish</spa
 </td>
 
 <td ALIGN=LEFT VALIGN=TOP>
-<div CLASS="Para">In the Packages view, select the new&nbsp;<span CLASS="Filename">test</span>
+<div CLASS="Para">In the Package Explorer, select the new&nbsp;<span CLASS="Filename">test</span>
 package and click the&nbsp;<span CLASS="Label">Create a Java Class</span>
 button in the toolbar.</div>
 </td>
