updated copyright notice

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
@@ -165,10 +165,10 @@
 
     </div>
 
-    <p>
-      <br />
-      <img src="../ngibmcpy.gif" alt="copyright notice" />
-    </p>
+    <div class="copyright">
+      <img src="../images/ngibmcpy2002.gif"
+        alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
+    </div>
 
   </body>
 </html>
