--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-5.htm
@@ -599,10 +599,10 @@ while (Test.class.isAssignableFrom(superClass)) {
       </li>
     </ol>
 
-    <P>
-      <br />
-      <img src="../ngibmcpy.gif" alt="copyright notice" />
-    </p>
+    <div class="copyright">
+      <img src="../images/ngibmcpy2002.gif"
+        alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
+    </div>
 
   </body>
 </html>
