--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-4.htm
@@ -43,10 +43,10 @@
       <img src="../images/qs-7.gif" alt="Package Explorer" />
     </div>
 
-    <p>
-      <br />
-      <img src="../ngibmcpy.gif" alt="copyright notice" />
-    </p>
+    <div class="copyright">
+      <img src="../images/ngibmcpy2002.gif"
+        alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." />
+    </div>
 
   </body>
 </html>
