*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/int.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/int.htm
@@ -13,7 +13,7 @@ Welcome to Eclipse
 <BODY BGCOLOR="#ffffff">
 <H1>
 Welcome to Eclipse</H1>
-<p>Welcome to the Eclipse platform!</p>
+<p>Welcome to the Eclipse platform!&nbsp;</p>
 <p><img border="0" src="images/splash.gif" width="500" height="330"></p>
 <p>The following sections discuss the issues and problems with building
 integrated tool suites, and how the Eclipse tooling platform can help solve
