Adding back/next links.

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-01.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-01.htm
@@ -11,11 +11,16 @@
 <H1 CLASS="Head">
 Basic tutorial</H1>
 <P>This tutorial provides a step by step walkthrough of the
-workbench.&nbsp;
-</P>
+workbench. Click the Next
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+and Back
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+links to read through the topics in order.</P>
 
 
-<P>&nbsp;<br>
+<P>
+<a href="qs-02a.htm"><img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12">
+The workbench</a><br>
 <P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </P>
 
