--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02b.htm
@@ -43,8 +43,15 @@ active.
 <p CLASS="Intro"><img align="texttop" border="0" src="../images/Image2-activeview.jpg" width="643" height="496"></p>
 <P CLASS="Intro">Clicking on the welcome page (editor) you can see that the
 editor's tab turns blue, and the Navigator's title bar is no longer blue. The
-welcome page is now our active editor.<P CLASS="Intro"><img align="texttop" border="0" src="../images/Image2-activeeditor.jpg" width="643" height="496"><P CLASS="Para">&nbsp;</P>
-<P>&nbsp;<br>
+welcome page is now our active editor.<P CLASS="Intro"><img align="texttop" border="0" src="../images/Image2-activeeditor.jpg" width="643" height="496"><P>
+<a href="qs-02a.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+The workbench</a>
+
+
+<P><a href="qs-02d.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Editors</a><br>
 <P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
