--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-100.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-100.htm
@@ -17,26 +17,26 @@ you have not modified any Java elements in the workbench. After performing
 a refactoring operation, you can build the project, run and debug it, and
 execute any test cases, and still undo the refactoring action.</div>
 
+<div CLASS="Para">To undo the most recent refactoring, select <b>Refactor</b>
+> <b>Undo</b> from the menu bar.</div>
 
-<p CLASS="Para">To undo the most recent refactoring, select <b>Refactor</b>
-> <b>Undo</b> from the menu bar.
 
 <p CLASS="Para"><b>Note</b>: If the workbench contains unsaved files that
 affect undoing the refactoring, an error dialog appears. The dialog contains
 a list of files that must be reverted to their saved editions before the
 refactoring can be completed.
-<p><img SRC="ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159>
+<p><img SRC="../images/ngrelc.gif" ALT="Related concepts" NOSAVE BORDER=0 height=27 width=159>
 <p><a href="../concepts/concepts-9.htm">Refactoring support</a>
-<p><img SRC="ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
+<p><img SRC="../images/ngrelt.gif" ALT="Related tasks" NOSAVE BORDER=0 height=27 width=159>
 <p><a href="tasks-82.htm">Refactoring without preview</a>
 <br><a href="tasks-83.htm">Refactoring with preview</a>
 <br><a href="tasks-84.htm">Previewing refactoring changes</a>
 <br><a href="tasks-101.htm">Redoing a refactoring operation</a>
-<p><img SRC="ngrelr.gif" ALT="Related reference" BORDER=0 height=27 width=159>
+<p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
 <p><a href="../reference/ref-116.htm">Refactoring actions</a>
 <br><a href="../reference/ref-117.htm">Refactoring wizard</a>
 <br><a href="../reference/ref-23.htm">Refactoring preferences</a>
 <br>&nbsp;
-<p><img SRC="ngibmcpy.gif" height=12 width=195>
+<p><img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
 </body>
 </html>
