--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-101.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-101.htm
@@ -13,22 +13,22 @@
 Redoing a refactoring operation</h1>
 
 <div CLASS="Para">To redo a previously undone refactoring operatoin, select
-<b>Refactor</b> > <b>Redo</b> from the menu bar.</div>
-
-<p><img SRC="ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159>
+<b>Refactor</b>
+> <b>Redo</b> from the menu bar.</div>
+<img SRC="../images/ngrelc.gif" ALT="Related concepts" NOSAVE BORDER=0 height=27 width=159>
 <p><a href="../concepts/concepts-9.htm">Refactoring support</a>
-<p><img SRC="ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
+<p><img SRC="../images/ngrelt.gif" ALT="Related tasks" NOSAVE BORDER=0 height=27 width=159>
 <p><a href="tasks-82.htm">Refactoring without preview</a>
 <br><a href="tasks-83.htm">Refactoring with preview</a>
 <br><a href="tasks-84.htm">Previewing refactoring changes</a>
 <br><a href="tasks-100.htm">Undoing a refactoring operation</a>
-<p><img SRC="ngrelr.gif" ALT="Related reference" BORDER=0 height=27 width=159>
+<p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
 <p><a href="../reference/ref-90.htm">Packages view</a>
 <br><a href="../reference/ref-102.htm">Outline view for Java</a>
 <br><a href="../reference/ref-116.htm">Refactoring actions</a>
 <br><a href="../reference/ref-117.htm">Refactoring wizard</a>
 <br><a href="../reference/ref-23.htm">Refactoring preferences</a>
 <br>&nbsp;
-<p><img SRC="ngibmcpy.gif" height=12 width=195>
+<p><img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
 </body>
 </html>
