--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-98.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-98.htm
@@ -16,10 +16,10 @@ Renaming method parameters</h1>
 the parameter's declaration as well as all references to the parameters
 inside the method body.</div>
 
-
-<p CLASS="Para">Use the&nbsp;<span CLASS="Label"><b>Modify Parameters</span></b>
+<div CLASS="Para">Use the&nbsp;<span CLASS="Label"><b>Modify Parameters</span></b>
 command to rename one or more parameters of a method as well as all references
-to these parameters.
+to these parameters.</div>
+
 <ol>
 <li CLASS="Para">
 Select the method in a Java view (the Outline view, for example)</li>
@@ -31,8 +31,7 @@ or, from the menu bar, select <b>Refactor > Modify Parameters</b></li>
 
 <div CLASS="Para"><b>Note: </b>these menu entries will no be active if
 the method has no parameters.</div>
-
-<p>To rename a single parameter it is often easier to:
+To rename a single parameter it is often easier to:
 <ol>
 <li>
 Select the parameter in the Java editor.</li>
@@ -40,13 +39,13 @@ Select the parameter in the Java editor.</li>
 <li>
 From the editor's pop-up menu, select <b>Refactor > Rename</b>.</li>
 </ol>
-<img SRC="ngrelc.gif" ALT="Related concepts" BORDER=0 height=27 width=159>
+<img SRC="../images/ngrelc.gif" ALT="Related concepts" NOSAVE BORDER=0 height=27 width=159>
 <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
-<p><img SRC="ngrelt.gif" ALT="Related tasks" BORDER=0 height=27 width=159>
+<p><img SRC="../images/ngrelt.gif" ALT="Related tasks" NOSAVE BORDER=0 height=27 width=159>
 <p><a href="tasks-96.htm">Renaming a method</a>
-<p><img SRC="ngrelr.gif" ALT="Related reference" BORDER=0 height=27 width=159>
+<p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
 <p><a href="../reference/ref-116.htm">Refactoring actions</a>
 <br>&nbsp;
-<p><img SRC="ngibmcpy.gif" height=12 width=195>
+<p><img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
 </body>
 </html>
