--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-25.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-25.htm
@@ -22,17 +22,17 @@ for finding, downloading, and installing new features.
 </p>
 
 
-<P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br></br>
+<P><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
 <a href="concepts-2.htm">Workbench</a></P>
 
 
-<P><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br></br>
-<a href="../tasks/tasks-34.htm">Installing features</a><br></br>
-<a href="../tasks/tasks-33.htm">Managing features</a><br></br>
-<a href="../tasks/tasks-35.htm">Removing features</a><br></br>
-<a href="../tasks/tasks-36.htm">Updating features</a><br></br>
-<a href="../tasks/tasks-37.htm">Reverting to previously installed features</a><br></br>
-<a href="../tasks/tasks-38.htm">Specifying the number of installation histories</a><br></br>
+<P><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="../tasks/tasks-34.htm">Installing features</a><br>
+<a href="../tasks/tasks-33.htm">Managing features</a><br>
+<a href="../tasks/tasks-35.htm">Removing features</a><br>
+<a href="../tasks/tasks-36.htm">Updating features</a><br>
+<a href="../tasks/tasks-37.htm">Reverting to previously installed features</a><br>
+<a href="../tasks/tasks-38.htm">Specifying the number of installation histories</a><br>
 </P>
 
 <P><img src ="../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. 2000,2002" width="195" height="12">
