--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02e.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-02e.htm
@@ -59,9 +59,16 @@ just one of the many features that allows you to build your own custom work
 environment.&nbsp;</P>
 <P CLASS="Para" align="center">
 <img align="texttop" border="0" src="../images/Image4_showview.jpg" width="341" height="250"></P>
-<P CLASS="Para">
-&nbsp;</P>
-<P>&nbsp;<br>
+
+
+<P><a href="qs-07a.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Our first project</a>
+
+
+<P><a href="qs-02d.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Editors</a><br>
 <P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
