--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07a.htm
@@ -24,7 +24,14 @@ project we will create a folder and file.
 </P>
 
 
-<P><br>
+<P><a href="qs-07b.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Using the File menu</a>
+
+
+<P><a href="qs-02e.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Views</a><br>
 <P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
