--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07c.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07c.htm
@@ -72,7 +72,12 @@ newly created folder.</P>
 </TR>
 </TBODY>
 </TABLE>
-<P>&nbsp;<br>
+<P>&nbsp;<P><a href="qs-07d.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Using the New button</a>
+<P><a href="qs-07b.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Using the File menu</a><br>
 <P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </P>
 
