--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-07d.htm
@@ -225,7 +225,14 @@ Preferences &gt; Workbench &gt; Link Navigator selection to active editor.
 </P>
 
 
-<P><br>
+<P><a href="qs-10b.htm">
+<img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
+Closing an editor</a>
+
+
+<P><a href="qs-07c.htm">
+<img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
+Using the popup</a><br>
 <P>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 
 </P>
