Doc update for 2.0

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
@@ -24,7 +24,7 @@ In this section, you will debug a Java program.</P>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-In the Packages view in the Java perspective, double-click <SPAN CLASS="Filename">
+In the Package Explorer view in the Java perspective, double-click <SPAN CLASS="Filename">
 junit.samples.VectorTest.java</SPAN>
  to open it in an editor.</P>
 </TD>
@@ -53,7 +53,7 @@ Adding a Breakpoint</P>
 </DIV>
 <DIV CLASS="Note">
 <P CLASS="Para">
-Note:	The breakpoint is blue because it is unverified, meaning that the containing class has not yet been loaded by the Java VM.</P>
+Note:	The breakpoint is blue with no checkmark overlay as the breakpoint is not yet installed, meaning that the containing class has not yet been loaded by the Java VM.</P>
 </DIV>
 </TD>
 </TR>
@@ -65,11 +65,9 @@ Note:	The breakpoint is blue because it is unverified, meaning that the containi
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-In the Packages view, select the <SPAN CLASS="Filename">
+In the Package Explorer view, select the <SPAN CLASS="Filename">
 junit.samples</SPAN>
- package and click the <SPAN CLASS="Label">
-Debug</SPAN>
- button in the toolbar.</P>
+ package and select the Run menu. Within the Run menu, select Debug As, and then Java Application.</P>
 </TD>
 </TR>
 <TR>
@@ -99,7 +97,7 @@ Finish</SPAN>.</P>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-As soon as the breakpoint is hit, the Debug perspective opens, and execution is suspended. Notice that the process is still active (not terminated) in the Processes view. Other threads might still be running.</P>
+As soon as the breakpoint is hit, the Debug perspective opens, and execution is suspended. Notice that the process is still active (not terminated) in the Debug view. Other threads might still be running.</P>
 <DIV CLASS="Snapshot">
 <DIV>
 <IMG SRC="../images/qs-70.gif" width="628" height="501">
@@ -107,7 +105,7 @@ As soon as the breakpoint is hit, the Debug perspective opens, and execution is 
 </DIV>
 <DIV CLASS="Note">
 <P CLASS="Para">
-Note:	The breakpoint is green because is it now verified.</P>
+Note:	The breakpoint has an overlay icon of a checkmark because it is now installed (VectorTest has been loaded in the Java VM).</P>
 </DIV>
 </TD>
 </TR>
@@ -136,9 +134,9 @@ Inspect</SPAN>.</P>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-The expression is evaluated in the context of the current stack frame, and the results are displayed in the Inspector view.</P>
+The expression is evaluated in the context of the current stack frame, and the results are displayed in the Expressions view.</P>
 <P CLASS="Para">
-Select the expression in the Inspector view, and from its context menu, select <SPAN CLASS="Label">
+Select the expression in the Expressions view, and from its context menu, select <SPAN CLASS="Label">
 Remove</SPAN>.</P>
 </TD>
 </TR>
@@ -172,6 +170,8 @@ Watch the variables (e.g., elementCount) in the Variables view as you do the fol
 Click the <SPAN CLASS="Label">
 Step Over</SPAN>
  button to step over the highlighted line of code. Execution will continue at the next line in the same method (or, if you are at the end of a method, it will continue in the method from which the current method was called).</P>
+ Note:	The variables that are changed as a result of the last step are highlighted
+in the color specified in the Debug Variable Views "Changed Variable Value Color" preference (default color is red).
 <DIV CLASS="Snapshot">
 <DIV>
 <IMG SRC="../images/qs-73.gif" width="370" height="234">
@@ -189,7 +189,7 @@ Step Over</SPAN>
 <P CLASS="Para">
 If the program has not executed fully when you are done debugging, select <SPAN CLASS="Label">
 Terminate</SPAN>
- from the context menu of the program's launch item in either the Processes view or the Debug view.</P>
+ from the context menu of the program's launch item in the Debug view.</P>
 </TD>
 </TR>
 </TBODY>
