--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-2d.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-2d.htm
@@ -42,39 +42,28 @@ In the Tasks view, click the New Task button <img align="texttop" border="0" src
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-A new task appears in the Tasks view. </P>
+A new task dialog appears. </P>
 </TD>
 </TR>
 <TR>
 <TD valign="top" align="left">
 <P CLASS="Para">
-<b>
-3.</b>
-</P>
-</TD>
-<TD valign="top" align="left">
-<P CLASS="Para">
-In the row for the new task that you've just created, click in the Description
-field.</P>
-</TD>
-</TR>
-<TR>
-<TD valign="top" align="left">
-<P CLASS="Para">
-<b>
-4.</b>
+<b>3.</b>
 </P>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
 Type a brief description for the task and press Enter. If you change your mind
-while entering the description you can press Escape to cancel the edit area.</P>
-<blockquote>
-<P CLASS="Para">
-<img align="texttop" border="0" src="../images/Image53_newtask.jpg" width="450" height="139"></P>
-</blockquote>
-<P CLASS="Para">
-&nbsp;</P>
+while entering the description you can press Escape to cancel the dialog.</P>
+</TD>
+</TR>
+<TR>
+<TD valign="top" align="left">
+<p CLASS="Para"><b>4.</b>
+</TD>
+<TD valign="top" align="left">
+<p CLASS="Para">The new task appears in the task list.</p>
+<p CLASS="Para"><img align="texttop" border="0" src="../images/Image53_newtask.jpg" width="450" height="139">
 </TD>
 </TR>
 </TBODY>
