--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-2d2.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-2d2.htm
@@ -126,6 +126,7 @@ Add several lines of text to the file at this point.
 </TD>
 <TD valign="top" align="left">
 Notice that as you add lines of text above it, the task marker moves down in the marker bar in order to remain with the associated line in the file.
+The line number in the Tasks view is updated when the file is saved.&nbsp;
 </TD>
 </TR>
 <TR>
