--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36b.htm
@@ -1,137 +1,142 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><html><head>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<meta http-equiv="Content-Style-Type" content="text/css">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN"><HTML>
+<HEAD>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
+<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 
-<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css"><title>The Search view</title></head>
-<body bgcolor="#ffffff">
+<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
+<title>The Search view</title>
+
+</HEAD>
+<BODY BGCOLOR="#ffffff">
 <h3>The Search view&nbsp;</h3>
-<p class="Head">Now that we have completed our search for "it" the
+<p CLASS="Head">Now that we have completed our searched for &quot;it&quot; the
 Search view is visible. The
 title of the Search view shows that 4 matches were found.&nbsp;</p>
 <blockquote>
-  <p class="Head"><img align="Texttop" border="0" src="../images/image51_search_view.jpg" width="312" height="144">&nbsp;&nbsp;</p>
+  <p CLASS="Head"><img align="texttop" border="0" src="../images/image51_search_view.jpg" width="312" height="144">&nbsp;&nbsp;</p>
 </blockquote>
-<p class="Head"> Within the
+<p CLASS="Head"> Within the
 Search view two files are shown and we can further see that within each file
 there were 2 matches found.&nbsp; Let's take a more detailed look at the Search
 view.&nbsp;</p>
-<table border="0" cellspacing="0" cellpadding="3">
-<thead>
-</thead>
-<tbody>
-<tr>
-<td valign="Top" align="Left">
+<TABLE BORDER="0" cellspacing="0" cellpadding="3">
+<THEAD>
+</THEAD>
+<TBODY>
+<TR>
+<TD valign="top" align="left">
 <b>1.</b>
-</td>
-<td valign="Top" align="Left">
-Hover over the title of the Search view. Observe that hover help appears and
+</TD>
+<TD valign="top" align="left">
+The title of the search view
 provides us with a description of the
-search we just performed.
+search we just performed. If the view is too narrow to display the full
+description, hover over the title of the Search view. Observe that hover help appears and
+provides the full description.&nbsp;
 <blockquote>
-  <p><img align="Texttop" border="0" src="../images/image51_search_hover.jpg" width="315" height="142"></p>
+  <p><img align="texttop" border="0" src="../images/image51_search_hover.jpg" width="315" height="142"></p>
 </blockquote>
-</td>
-</tr>
-<tr>
-<td valign="Top" align="Left">
-<p class="Para">
+</TD>
+</TR>
+<TR>
+<TD valign="top" align="left">
+<P CLASS="Para">
 <b>2.</b>
-</p>
-</td>
-<td valign="Top" align="Left">
-<p class="Para">
-Click the Show Next Match button <img align="Texttop" border="0" src="../images/image51_search_next.jpg" width="23" height="18">
-to navigate to the first match of the search expression ("it").&nbsp;</p>
-<p class="Para">
+</P>
+</TD>
+<TD valign="top" align="left">
+<P CLASS="Para">
+Click the Show Next Match button <img align="texttop" border="0" src="../images/image51_search_next.jpg"  width="23" height="18">
+to navigate to the first match of the search expression (&quot;it&quot;).&nbsp;</P>
+<P CLASS="Para">
  Notice that the file JanesText.txt is automatically selected and opened in the
-editor area.</p>
-<p class="Para">Click Show Next Match button two more times. Once again the
-Search view automatically opens the file.</p>
-</td>
-</tr>
-<tr>
-<td valign="Top" align="Left">
+editor area.</P>
+<P CLASS="Para">Click Show Next Match button two more times. Once again the
+Search view automatically opens the file.</P>
+</TD>
+</TR>
+<TR>
+<TD valign="top" align="left">
 <b>3.</b>
-</td>
-<td valign="Top" align="Left">
+</TD>
+<TD valign="top" align="left">
 It is sometimes useful to remove uninteresting matches from the search results. The Search view's popup menu
 provides two ways to remove matches:
 <ul>
   <li>Remove Current Match - Removes the actual match that you are currently looking
     at. If a file contains multiple matches, as in our case, only the current
     match is removed.</li>
-  <li>Remove Selected Matches - Removes all matches for all selected files.</li><li>Remove All Matches - Removes all matches.<br>
-            </li>
-
+  <li>Remove Selected Match - Removes the file entry and all matches in it. </li>
 </ul>
-</td>
-</tr>
-<tr>
-<td valign="Top" align="Left">
+</TD>
+</TR>
+<TR>
+<TD valign="top" align="left">
 <b>4.</b>
-</td>
-<td valign="Top" align="Left">
+</TD>
+<TD valign="top" align="left">
 Choose Remove Current Match from the popup. Notice how JanesFile.txt only has one match
 left.
-</td>
-</tr>
-<tr>
-<td valign="Top" align="Left">
+</TD>
+</TR>
+<TR>
+<TD valign="top" align="left">
 <b>5.</b>
-</td>
-<td valign="Top" align="Left">
+</TD>
+<TD valign="top" align="left">
 Select&nbsp;JanesText.txt in the Search view.
-</td>
-</tr>
-<tr>
-<td valign="Top" align="Left">
+</TD>
+</TR>
+<TR>
+<TD valign="top" align="left">
 <b>6.</b>
-</td>
-<td valign="Top" align="Left">
+</TD>
+<TD valign="top" align="left">
 Choose Remove Selected Match from the popup menu. 
 <p>The Search view now shows only one match for JanesFile.txt</p>
 <blockquote>
-  <p><img align="Texttop" border="0" src="../images/Image51_search_reduced.jpg" width="316" height="130"></p>
+  <p><img align="texttop" border="0" src="../images/Image51_search_reduced.jpg" width="316" height="130"></p>
 </blockquote>
-</td>
-</tr>
-<tr>
-<td valign="Top" align="Left">
+</TD>
+</TR>
+<TR>
+<TD valign="top" align="left">
 <b>7.</b>
-</td>
-<td valign="Top" align="Left">
-Perform a second search for "that" by clicking on the Search button <img align="Texttop" border="0" src="../images/Image50_search.jpg" width="20" height="19">
+</TD>
+<TD valign="top" align="left">
+Perform a second search for &quot;that&quot; by clicking on the Search button <img align="texttop" border="0" src="../images/Image50_search.jpg"  width="20" height="19">
  in the workbench's toolbar.
-</td>
-</tr>
-<tr>
-<td valign="Top" align="Left">
+</TD>
+</TR>
+<TR>
+<TD valign="top" align="left">
 <b>8.</b>
-</td>
-<td valign="Top" align="Left">
+</TD>
+<TD valign="top" align="left">
 The Search view updates to show the results of the new search. 
 <p>You can move back and forth between your two search results using the drop
 down button on the Search views toolbar. </p>
 <blockquote>
-  <p><img align="Texttop" border="0" src="../images/Image51_search_switching.jpg" width="438" height="133"></p>
+  <p><img align="texttop" border="0" src="../images/Image51_search_switching.jpg" width="438" height="133"></p>
 </blockquote>
-</td>
-</tr>
-<tr>
-<td valign="Top" align="Left">
+</TD>
+</TR>
+<TR>
+<TD valign="top" align="left">
 <b>9.</b>
-</td>
-<td valign="Top" align="Left">
-In the drop down button choose "it" - 1 Occurrence in Workspace. The Search view
+</TD>
+<TD valign="top" align="left">
+In the drop down button choose &quot;it&quot; - 1 Occurrence. The Search view
 switches back to show you the original search. On the context menu choose Search
 Again to repeat the initial search. Notice that once again we have 4 matches.
-</td>
-</tr>
-</tbody>
-</table>
-
+</TD>
+</TR>
+</TBODY>
+</TABLE>
 <p><br>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
 </p>
 
-</body></html>
+
+</BODY>
+</HTML>
