--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-3b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-37-3b.htm
@@ -16,7 +16,7 @@ this section we will look at setting and removing bookmarks and viewing them in 
 Bookmarks view.</P>
 <P CLASS="Para">
 The Bookmarks&nbsp; view displays all bookmarks&nbsp; in the workbench. To show
-the Bookmarks view choose Perspective &gt; Show View &gt; Bookmarks while in the
+the Bookmarks view choose Window &gt; Show View &gt; Bookmarks while in the
 Resource perspective.</P>
 <blockquote>
   <P>&nbsp;<img align="texttop" border="0" src="../images/Image54_bookmark1.jpg" width="213" height="207">
