*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/keyboardshortcuts.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/keyboardshortcuts.htm
@@ -20,8 +20,7 @@
  and across the text and java editors supplied with Eclipse.</p>
  
  <p>The first table shows the default key bindings. The second table shows the
- key bindings for the Emacs key bindings shipped with Eclipse. See <b>Workbench-&gt;Preferences-&gt;Workbench-&gt;Editors
- </b>to see the available key binding sets.</p>
+ key bindings for the Emacs key bindings shipped with Eclipse. </p>
  
 <table border=0 cellspacing=5 cellpadding=2 >
   <tr> 
@@ -1608,16 +1607,18 @@ Emacs Key Bindings</b>
 
 <p>&nbsp;
 
- <p><img src="../../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="accessmain.htm"><br>
-Accessibility Features in Eclipse</a></p>
+<p><img src="../../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
+ <a href="accessmain.htm"><br>Accessibility Features in Eclipse</a>
+ <a href="../../tasks/tkeybindings.htm"><br>Changing the key bindings</a>
+ <a href="navigation.htm"><br>Navigating the user interface by using the keyboard</a></p>
 
-<p><a href="navigation.htm">Navigating the user interface by using the keyboard</a></p>
  <p><img src="../../images/ngrelr.gif" alt="Related references" width="159" height="27"><br>
  <a href="fontsandcolors.htm">Font and color settings using the Window
- Preferences</a></p>
+ Preferences</a>
+</p>
 
  
-<p><a href="../../hglegal2002.htm"><img src="../../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" ></a></p>
+<p><a href="../../hglegal2002.htm"><img src="../../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a></p>
 
 
 </body>
