--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/navigation.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/navigation.htm
@@ -53,14 +53,13 @@
  <h2>Accelerators </h2>
  <p>Many of the actions in Eclipse have an accelerator assigned to them. For the
  full list of these accelerators see the Keyboard shortcuts reference below. </p>
-<p><img src="../../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><a href="accessmain.htm"><br>
-Accessibility Features in Eclipse</a></p>
- <p><img src="../../images/ngrelr.gif" alt="Related references" width="159" height="27"><br>
- <a href="keyboardshortcuts.htm">Keyboard shortcuts</a></p>
+<p><img src="../../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
+ <a href="accessmain.htm"><br>Accessibility Features in Eclipse</a>
+ <a href="../../tasks/tkeybindings.htm"><br>Changing the key bindings</a>
+ <a href="keyboardshortcuts.htm"><br>Keyboard shortcuts</a> 
+</p>
+ <p><img src="../../images/ngrelr.gif" alt="Related references" width="159" height="27">
+ <a href="fontsandcolors.htm"><br>Font and color settings using the Window Preferences.</a></p>
 
- 
- <p><a href="fontsandcolors.htm">Font and color settings using the Window Preferences.</a></p>
-
- 
-<p><a href="../../hglegal2002.htm"><img src="../../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" ></a></p>
+<p><a href="../../hglegal2002.htm"><img src="../../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. and others 2000, 2002. All Rights Reserved." border="0"></a></p> 
 </body>
