Doc update for 2.0

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-14.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-14.htm
@@ -24,7 +24,8 @@ In this section, you will evaluate expressions from your Java code.</P>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-In the Display view in the Debug perspective, type the following line:</P>
+Debug junit.samples.VectorTest.java to a breakpoint at line 26 (see the <A href="qs-13.htm"> Debugging your Programs</A> section for full details). 
+<br>In the Display view in the Debug perspective, type the following line:</P>
 <P CLASS="Para">
 <SPAN CLASS="Code">
 fFull.size()</SPAN>
@@ -40,7 +41,7 @@ fFull.size()</SPAN>
 <TD valign="top" align="left">
 <P CLASS="Para">
 Select the text you just typed, and from its context menu, select <SPAN CLASS="Label">
-Display</SPAN>.</P>
+Display (or the equivalent item in the Display view toolbar or Run menu)</SPAN>.</P>
 <DIV CLASS="Snapshot">
 <DIV>
 <IMG SRC="../images/qs-74.gif" width="275" height="115">
@@ -87,7 +88,7 @@ fFull.toArray()</SPAN>
 <P CLASS="Para">
 Select this line, and select <SPAN CLASS="Label">
 Inspect</SPAN>
- from its context menu.</P>
+ from the Display view context menu (or the equivalent item in the toolbar or Run menu).</P>
 </TD>
 </TR>
 <TR>
@@ -98,7 +99,7 @@ Inspect</SPAN>
 </TD>
 <TD valign="top" align="left">
 <P CLASS="Para">
-The Inspector view opens with the value of the evaluated expression.</P>
+The Expressions view opens with the value of the evaluated expression.</P>
 <DIV CLASS="Snapshot">
 <DIV>
 <IMG SRC="../images/qs-76.gif" width="371" height="156">
