--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-10.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-10.htm
@@ -23,10 +23,10 @@ and toolbar contributions.</P>
 When multiple editors are open, they will appear stacked in the editor
 area.&nbsp;You can change which editor is active by clicking on the
 editor's tab.&nbsp; The name of the file being edited appears on the editor's tab.</P>
-<P>&nbsp;<br>
-<img src = ../ngibmcpy.gif width="195" height="12">
-</P>
 
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+</p>
 
 </BODY>
 </HTML>
