--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-11.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-11.htm
@@ -54,10 +54,10 @@ Bookmarks</h3>
 <P CLASS="Para" Label=Type>
 Bookmarks place an anchor either at a specific line in a resource or
 on the resource itself.</P>
-<P>&nbsp;<br>
-<img src = ../ngibmcpy.gif width="195" height="12">
-</P>
 
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+</p>
 
 </BODY>
 </HTML>
