--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-12.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-12.htm
@@ -59,10 +59,9 @@ Finding a resource quickly</a><a href="../tasks/tasks-63cg.htm"><br>
 Copying resources</a><a href="../tasks/tasks-63.htm"><br>
 Moving resources</a></p>
 
-
-<p><img src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
 </p>
-
 
 </BODY>
 </HTML>
