--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-16.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-16.htm
@@ -25,9 +25,10 @@
 <div CLASS="Subtopic">
   <a NAME="elementId-1152519"></a><a NAME="pgfId-1152615"></a>
 </div>
-<P>&nbsp;<img src = ../ngibmcpy.gif width="195" height="12">
-</P>
 
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+</p>
 
 </BODY>
 </HTML>
