--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-17.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-17.htm
@@ -38,11 +38,9 @@ Narrowing the scope of the Navigator view</a><a href="../tasks/tasks-48.htm"><br
 Sorting resources in the Navigator view</a><a href="../tasks/tasks-48b.htm"><br>
 Showing or hiding files in the Navigator view</a></p>
 
-
-<P>
-<img src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
-</P>
-
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+</p>
 
 </BODY>
 </HTML>
