--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-17a.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-17a.htm
@@ -26,10 +26,9 @@ Comparing resources with local history</a><a href="../tasks/tasks-88.htm"><br>
 Setting local history preferences<br>
 </a><a href="../tasks/tasks-100.htm">Creating a version of a project</a></p>
 
-<P><br>
-<img src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
-</P>
-
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+</p>
 
 </BODY>
 </HTML>
