--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-19.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-19.htm
@@ -16,10 +16,10 @@ The contents of the toolbar will change based on the active editor.&nbsp;Since
 views
 may be the target of actions in the toolbar, items in the toolbar may be
 enabled or disabled based on the state of either the active view or editor.</P>
-<P><br>
-<img src = ../ngibmcpy.gif width="195" height="12">
-</P>
 
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+</p>
 
 </BODY>
 </HTML>
