--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-20.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-20.htm
@@ -15,10 +15,10 @@ view.&nbsp; Actions in a view's toolbar apply only to the view in which they app
 <P CLASS="Para" Label=Type>
 View toolbars may contain a drop down menu (visible as a small triangle)
 containing actions for that view.</P>
-<P>&nbsp;<br>
-<img src = ../ngibmcpy.gif width="195" height="12">
-</P>
 
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+</p>
 
 </BODY>
 </HTML>
