--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-21.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-21.htm
@@ -33,11 +33,8 @@ Toolbars</a></P>
 Moving and docking views</a><br>
 <a href="../tasks/tasks-3i.htm">Maximizing a view or editor</a></P>
 
-
-<P CLASS="Para" Label=Type>
-<br>
-<img src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
-</P>
-
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+</p>
 
 </HTML>
