--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-22.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-22.htm
@@ -53,9 +53,10 @@ Building resources</a><br>
 </a><a href="../tasks/tasks-16.htm">Performing builds automatically<br>
 </a><a href="../tasks/tasks-17.htm">Saving resources automatically before a manual build</a><a href="../tasks/tasks-14.htm"><br>
 Changing build order</a></p>
-<p><img src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
-</p>
 
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+</p>
 
 </BODY>
 </HTML>
