--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-23.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-23.htm
@@ -20,10 +20,10 @@ previously built state to save work.</LI>
 Full: operates over the selected set of resources rebuilding the required
 derived state from scratch.&nbsp; Previously built state is discarded.&nbsp;&nbsp;</LI>
 </UL>
-<P>&nbsp;<br>
-<img src = ../ngibmcpy.gif width="195" height="12">
-</P>
 
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+</p>
 
 </BODY>
 </HTML>
