--- a/bundles/org.eclipse.platform.doc.user/concepts/cbookmrk.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/cbookmrk.htm
@@ -27,11 +27,9 @@ Deleting a Bookmark<br>
 </a><a href="../tasks/tasks-77.htm">Adding line items in the Tasks view</a><a href="../tasks/tasks-77b.htm"><br>
 Associating a task with an editable resource</a></p>
 
-
-<p>
-<img align="texttop" src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
 </p>
-
 
 </BODY>
 </HTML>
