--- a/bundles/org.eclipse.platform.doc.user/concepts/chelpsys.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/chelpsys.htm
@@ -46,11 +46,11 @@ to more information.</p>
 <a href="../tasks/taccess.htm">Accessing and navigating online help</a><br>
 <a href="../tasks/tsearch.htm">Searching online help</a><br>
 <a href="../tasks/tf1help.htm">Accessing context-sensitive help</a><br>
-<p>
-<p>
-<img align="texttop" src = "../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000,2001" width="195" height="12">
+</p>
+
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
 </p>
 
 </body>
-
 </html>
