--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-18.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-18.htm
@@ -9,6 +9,8 @@
 <meta name="keyword" content="fast view">
 </HEAD>
 
+<BODY>
+
 <H1 CLASS="Head">Toolbars </H1>
 
 <p CLASS="Para" Label="Type">There are three kinds of toolbar in the workbench.</p>
@@ -43,8 +45,10 @@ list of related reference topics below for a table of all toolbar buttons.</p>
 Creating fast views</a></p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
 <a href="../reference/ref-68.htm">Toolbar buttons</a></p>
-<p CLASS="Para" Label="Type"><img src="../images/ngibmcpy.gif" alt="Copyright IBM Corp. 2000, 2001" width="195" height="12"></p>
-<p CLASS="Para" Label="Type">&nbsp;</p>
 
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+</p>
 
+</BODY>
 </HTML>
