--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-2.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-2.htm
@@ -32,10 +32,9 @@ Opening perspectives<br>
 <P><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><a href="../reference/ref-68.htm"><br>
 Toolbar buttons</a></P>
 
-
-<P><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corp. 2000,2002" width="195" height="12">
-</P>
-
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+</p>
 
 </BODY>
 </HTML>
