--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-24.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-24.htm
@@ -21,10 +21,10 @@ Manual: the user explicitly initiates a build using a menu or accelerator
 key.&nbsp; Manual builds can be either full or incremental and can operate over
 collections of projects or the entire workspace.</LI>
 </UL>
-<P>&nbsp;<br>
-<img src = ../ngibmcpy.gif width="195" height="12">
-</P>
 
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+</p>
 
 </BODY>
 </HTML>
