spaces between paragraphs

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-51.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-51.htm
@@ -25,11 +25,13 @@ Drag and drop the selected resources in the desired location.</li>
 <div class="para"><b>Note</b>: You can use drag-and-drop to move resources
 between different workbench windows. Select a resource you want to move,
 and drag-and-drop it in the desired destination. If you want to copy rather
-than move, hold the <b>Ctrl</b> key down while dragging.</div>
+than move, hold the <b>Ctrl</b> key down while dragging.
+<br>&nbsp;</div>
 
 <div class="para">You can also use drag-and-drop to copy resources between
 the workbench and the desktop (both ways), but you cannot move files from
-the desktop to the workbench using drag-and-drop.</div>
+the desktop to the workbench using drag-and-drop.
+<br>&nbsp;</div>
 
 <div class="para">Moving compilation units updates only package declarations;
 it does not update references to the classes declared in those compilation
@@ -38,7 +40,7 @@ units. This can result in compilation errors. If you use the <b>Refactor</b>
 to classes defined in the selected compilation units will be updated as
 well.</div>
 
-<p><img SRC="..\images\ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
+<p><br><img SRC="..\images\ngrelc.gif" ALT="Related concepts" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <p><a href="..\concepts\concepts-3.htm">Java projects</a>
 <br><a href="..\concepts\concepts-9.htm">Refactoring support</a>
 <p><img SRC="..\images\ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1026" height=27 width=159>
